# atomic_queue

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  Makefile  README.md  atomic_queue.h  atomic_queue_mutex.h  atomic_queue_spin_lock.h  barrier.h  benchmarks.cc  cpu_base_frequency.cc  cpu_base_frequency.h  defs.h  huge_pages.cc  huge_pages.h  meson.build  meson_options.txt  moodycamel.h  mpmc_queue.h  output-to-stats.py  plot_scalability.py  result1.txt  results-28.20191005T135008.txt  results_to_stats.py  spinlock.h  tests.cc
.github/workflows/: c-cpp.yml  check-code-format.yml  ci-linux.yml  ci-macos.yml  ci-meson.yml  ci-windows.yml  ci.yml  cmake-gcc-clang.yml  cmake-multi-platform.yml
html/: benchmarks.css  benchmarks.html  benchmarks.js  results.js  scalability.css  scalability.html  scalability.js  theme.js
include/: CMakeLists.txt
include/atomic_queue/: atomic_queue.h  atomic_queue_mutex.h  barrier.h  defs.h  moodycamel.h  spinlock.h
results/: 1a3774a.ryzen_5825u.smt0.20260506T170159.gcc-14.8.33.txt  1a3774a.ryzen_5825u.smt1.20260506T155410.gcc-14.16.33.txt  1a3774a.ryzen_5950x.smt0.20260506T192644.gcc-14.16.33.txt  1a3774a.ryzen_5950x.smt1.20260506T160149.gcc-14.32.33.txt  5825u-f469caa-smt0.20260426T183006.gcc-14.8.33.txt  5825u-f469caa-smt1.20260426T154314.gcc-14.16.33.txt  cross-core.20260419T043005.gcc-14.16.33.txt  cross-core.20260419T043307.gcc-14.8.33.txt  cross-core.20260422T142754.gcc-14.8.33.txt  d9dd488.ryzen_5825u.smt0.20260427T111942.gcc-14.8.33.txt  d9dd488.ryzen_5825u.smt1.20260427T095853.gcc-14.16.33.txt  d9dd488.ryzen_5950x.smt0.20260427T134237.gcc-14.16.33.txt  d9dd488.ryzen_5950x.smt1.20260427T100004.gcc-14.32.33.txt  e1aa92c.ryzen_5825u.smt0.20260428T100041.gcc-14.8.33.txt  e1aa92c.ryzen_5825u.smt1.20260428T085143.gcc-14.16.33.txt  e1aa92c.ryzen_5950x.smt0.20260428T121738.gcc-14.16.33.txt  e1aa92c.ryzen_5950x.smt1.20260428T085227.gcc-14.32.33.txt  results-16.20220720T220953.txt  results-28.20190616T225153.txt  results-28.20190706T132348.txt  results-28.20190911T201158.txt  results-28.20190916T203039.txt  results-28.20190922T203918.txt  results-28.20190929T172850.txt  results-28.20191221T010636.txt  results-28.20200126T222915.txt  results-28.20200704T034247.txt  results-32.20210415T203448.txt  results-32.20210418T004017.txt  results-8.20190616T152442.txt  results-8.20190707T145703.txt  results-8.20190910T044925.txt  results-8.20190922T204338.txt  results-8.20190924T223108.txt  results-8.20190929T155329-gcc8.txt  smt.20260422T152848.gcc-14.16.33.txt
scripts/: benchmark-epilogue.sh  benchmark-prologue.sh  benchmark.sh  latency_to_json.py  parse_output.py  plot_scalability.py  run-benchmarks-for.sh  run-benchmarks.sh  scalability_to_json.py  stats.py  util.sh
src/: CMakeLists.txt  benchmarks.cc  benchmarks.h  cpu_base_frequency.cc  cpu_base_frequency.h  example.cc  huge_pages.cc  huge_pages.h  moodycamel.h  tests.cc  tests.mm
